# MCM_discrete_data

./: .gitignore  README.md
.github/workflows/: notes.yml  outline.yml
data/SC_voting/: Jij_ussc_unsorted.txt  hi_ussc_unsorted.txt
notebooks/: data_generating.ipynb  data_processing_big5.ipynb  fitting.ipynb  mcm_big5_q3.ipynb  mcm_big5_q3_v1.ipynb  mcm_big5_q3_v2.ipynb  mcm_supreme_court.ipynb  mcm_supreme_court_binary.ipynb  mcm_supreme_court_discrete.ipynb  stoch_block_model.ipynb
notes/: main.tex  uva-inf-article.cls
notes/appendix/: derivations.tex  polar_coordinates.tex  spin_model_examples.tex
notes/theory/: bms.tex  theory_section.tex
outline/: introduction.tex  main.tex  references.bib  uva-inf-article.cls
python/: mcm_binary.py  mcm_discrete.py  spin_model.py
python/data/: read_in.py  stoch_block_model.py
python/tests/: test_gt.py  test_spin_ops.py  test_tools.py
python/utils/: spin_ops.py  tools.py  transformations.py
src/: CMakeLists.txt  data_from_sbm.cpp  environment.yml  main.cpp  mcm.py  mcm_binary.py  mcm_discrete.py  model_generator.py  spin_model.py  spin_models.py  utils.py
src/model/: CMakeLists.txt  data.cpp  evidence.cpp  gauge_transform.cpp  model.cpp  model.h  partition.cpp  spin_op.cpp
src/search_algorithms/: divide_and_conquer.cpp  exhaustive.cpp  greedy.cpp  search.h
src/stoch_block_model/: CMakeLists.txt  data.cpp  sbm.cpp  sbm.h
src/tests/: CMakeLists.txt  test_data.cpp  test_evidence.cpp  test_gt.cpp  test_model.cpp  test_model_generator.py  test_partition.cpp  test_sbm.cpp  test_search.cpp  test_spin_op.cpp  test_utils.py
src_cpp/: CMakeLists.txt  main.cpp
src_cpp/model/: CMakeLists.txt  data.cpp  evidence.cpp  model.h  partition.cpp
src_cpp/search_algorithms/: CMakeLists.txt  divide_and_conquer.cpp  exhaustive.cpp  greedy.cpp  search.h
